--- a/app/src/main/res/layout/activity_projekt_init3von4.xml
+++ b/app/src/main/res/layout/activity_projekt_init3von4.xml
@@ -163,6 +163,28 @@
 
                 </LinearLayout>
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="05dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="20dp"
+                >
+                <TextView
+                    android:id="@+id/txv_relevante_fehlerbilder"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Relevante Fehlerbilder"
+                    android:layout_gravity="left"
+                    android:layout_marginLeft="09dp"
+                    android:textSize="20sp"
+                    android:textColor="#808080"
+                    android:textStyle="bold"
+                    />
+
+
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/lin_relevante_fehlerbilder"
