--- a/app/src/main/res/layout/activity_fehlerau_fnahme.xml
+++ b/app/src/main/res/layout/activity_fehlerau_fnahme.xml
@@ -84,10 +84,10 @@
                     android:layout_marginLeft="05dp"
                     />
                 <LinearLayout
-                    android:layout_width="110dp"
+                    android:layout_width="120dp"
                     android:layout_height="40dp"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="15dp"
+                    android:layout_marginRight="10dp"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/text_bg_border"
                     >
@@ -180,7 +180,7 @@
                         android:id="@+id/txv_result"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="1"
+
                         android:layout_below="@+id/imgv_nio_nok"
                         android:textSize="25sp"
                         android:textColor="#808080"
@@ -267,7 +267,7 @@
                         android:id="@+id/txv_result_sonderfreigabe"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="1"
+                        android:text="0"
                         android:layout_below="@+id/imgv_sonderfreigabe"
                         android:textSize="25sp"
                         android:textColor="#808080"
@@ -351,7 +351,7 @@
                         android:id="@+id/txv_result_io_ok"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="1"
+                        android:text="0"
                         android:layout_below="@+id/imgv_io_ok"
                         android:textSize="25sp"
                         android:textColor="#808080"
@@ -394,7 +394,7 @@
 
 
                 <LinearLayout
-                    android:id="@+id/rl_next"
+                    android:id="@+id/lin_reset"
                     android:layout_width="180dp"
                     android:layout_height="30dp"
                     android:layout_marginTop="0dp"
